--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -78,7 +78,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../godot/juegoA1/Beta.html"
+export_path="../../exportacion-orbiton/Beta.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
