--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,36 +13,43 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-555
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://mundos/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Ecenas/", "res://Ecenas/Assets de Todos los mapas/", "res://Ecenas/Assets de Todos los mapas/Texturas BETAS/")
+dock_filesystem_selected_paths=PackedStringArray("res://ModelosAIs/logica_HADA_AI/LLM+RECUP/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ModelosAIs/", "res://ModelosAIs/logica_HADA_AI/")
+dock_bottom=[]
+dock_closed=[]
+dock_filesystem_h_split_offset=240
+dock_filesystem_v_split_offset=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Ecenas/Jugador/protagonista/character_body_2d.tscn", "res://ModelosAIs/modelo.tscn")
-current_scene="res://ModelosAIs/modelo.tscn"
-center_split_offset=-493
+open_scenes=PackedStringArray("res://Ecenas/Menu/menu.tscn")
+current_scene="res://Ecenas/Menu/menu.tscn"
+center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Ecenas/Jugador/protagonista/CharacterBody2D.gd", "res://ModelosAIs/Modelo.gd", "res://README.md"]
-selected_script="res://ModelosAIs/Modelo.gd"
+open_scripts=["res://Ecenas/Menu/menu.gd"]
+selected_script="res://Ecenas/Menu/menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
+zoom_factor=1.0
 
 [ShaderEditor]
 
 open_shaders=[]
 split_offset=0
 selected_shader=""
+text_shader_zoom_factor=1.0
