--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,18 +1,4 @@
-[res://Ecenas/Jugador/protagonista/CharacterBody2D.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 19,
-"scroll_position": 7.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://ModelosAIs/Modelo.gd]
+[res://Ecenas/Menu/menu.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -24,18 +10,4 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
-}
-
-[res://README.md]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Plain Text"
 }
